5 March 2012: Wouter
	- distinguish 2xx, 3xx and other (404) http rcodes.
	- config file contains the expected content of the urls.
	- ssl can list multiple hashes (for certificate rollover).

2 March 2012: Wouter
	- http check is performed, nonblocking.  Lookup of addres(es), A, AAAA
	  to the (up to 5) DHCP DNS resolvers.  3 urls are checked, until one
	  connects, then it checks content.  IP4 and IP6, until first works.
	- url for ster.nlnetlabs.nl and fedoraproject.org added in config.
	- absolute sbindir in netconfig hooks.

23 Feb 2012: Wouter
	- fedora package files updated.

22 Feb 2012: Wouter
	- Fix Fedora bug with no DNS servers in resolv.conf with absolute path
	  in networkmanager hook script.
	- The .desktop entry name without 'panel'.

17 Feb 2012: Wouter
	- and osx status icon file changed.
	- release 0.10
	- trunk is 0.11 under development.

16 Feb 2012: Wouter
	- Do not show the insecure and hotspot windows at the same time.
	- Fix for OSX to show the popups on top of the other windows.
	- alert icon easier to read.

25 Jan 2012: Wouter
	- version set to 0.10: dnssec-trigger is experimental.

23 Jan 2012: Wouter
	- updated acx.nlnetlabs.m4 for gcc 4.6 compat for portability tests.

19 Jan 2012: Wouter
	- show package version in probe results dialog.

17 Jan 2012: Wouter
	- do not just refresh the systray, but entire desktop (for windows).
	- fix dnssec-trigger-control error printout if SSL files fail.
	- dnssec-trigger-control uses registry config location (for windows).
	- install script removes leftover trayicons using direct windows API.

14 Jan 2012: Wouter
	- show version number in add-removeprograms configpanel (windows).
	- refresh systray after install to solve stray tray icon (for windows).

13 Jan 2012: Wouter
	- Use Processes.dll code (can be freely used, source provided) for
	  kill process in windows NSIS installer.  Compiled to 6kb (not 50kb).
	  Processes.dll was made by Andrei Ciubotaru.